--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="empty_title">Nothing to show</string>
     <string name="retry_title">Retry</string>
     <string name="show_more">More of the same</string>
+    <string name="nsfw_text">Not safe for work</string>
 </resources>
