--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="retry_title">Retry</string>
     <string name="show_more">More of the same</string>
     <string name="nsfw_text">Not safe for work</string>
-    <string name="search_box_hint">Type your search here, e.g. "Monkey in a pink spacesuit, in the style of Banksy"</string>
+    <string name="search_box_hint">What image you are looking for ? E.g. monkey in a pink spacesuit</string>
 </resources>
