--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">StableDiffuser</string>
     <string name="title_search">Search</string>
-    <string name="title_mosaic">Mosaic</string>
+    <string name="title_favorites">Favorites</string>
     <string name="title_art">Art</string>
     <string name="empty_title">Nothing to show</string>
     <string name="retry_title">Retry</string>
