changed one example

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_art">Art</string>
     <string name="empty_title">Nothing to show</string>
-    <string name="retry_title">Retry</string>
+    <string name="retry_title">Try again</string>
     <string name="show_more">More of the same</string>
     <string name="nsfw_text">Not safe for work</string>
     <string name="search_box_hint">What image you are looking for?</string>
