--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="recent_searches">Recent searches</string>
     <string name="clear">clear</string>
     <string name="no_search_query">No search query</string>
+    <string name="nav_drawer_lexica_title">All art fetched through Lexica Art public API, check it out here:</string>
+    <string name="nav_drawer_lexica_url">http://www.lexica.art</string>
+    <string name="nav_drawer_title">About</string>
+    <string name="nav_drawer_personal_title">Want to provide feedback, suggest improvements, or do business together:</string>
+    <string name="nav_drawer_personal_url">https://www.linkedin.com/in/benoithebrard/</string>
 </resources>
