--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="nav_drawer_lexica_title">All art fetched through Lexica Art public API:</string>
     <string name="nav_drawer_lexica_url">http://www.lexica.art</string>
     <string name="nav_drawer_title">About</string>
-    <string name="nav_drawer_personal_title">Want to provide feedback, suggest improvements, or do business together:</string>
+    <string name="nav_drawer_personal_title">Want to provide feedback, suggest improvements, or offer a job?</string>
     <string name="nav_drawer_personal_url">https://www.linkedin.com/in/benoithebrard/</string>
     <string name="nav_drawer_app_version">App version 1.0.0</string>
     <string name="nav_drawer_code_title">Source code of the app:</string>
