--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="nav_drawer_personal_title">If you want to provide feedback, suggest improvements, or offer a job:</string>
     <string name="nav_drawer_personal_url">https://www.linkedin.com/in/benoithebrard/</string>
     <string name="nav_drawer_app_version">App version 1.0.0</string>
-    <string name="nav_drawer_code_title">The source code of the app is available here:</string>
+    <string name="nav_drawer_code_title">The app source code is available on:</string>
     <string name="nav_drawer_code_url">https://github.com/benoithebrard/StableDiffuser</string>
 </resources>
