--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="recent_searches">Recent searches</string>
     <string name="clear">clear</string>
     <string name="no_search_query">No search query</string>
-    <string name="nav_drawer_lexica_title">All art fetched through Lexica Art public API, try it out here:</string>
+    <string name="nav_drawer_lexica_title">All art comes from Lexica public API, you can try it out at:</string>
     <string name="nav_drawer_lexica_url">http://www.lexica.art</string>
     <string name="nav_drawer_title">About</string>
     <string name="nav_drawer_personal_title">If you want to provide feedback, suggest improvements, or offer a job:</string>
