--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="nav_drawer_lexica_title">All art comes from Lexica public API, you can try it out at:</string>
     <string name="nav_drawer_lexica_url">http://www.lexica.art</string>
     <string name="nav_drawer_title">About</string>
-    <string name="nav_drawer_personal_title">If you want to provide feedback, suggest improvements or even offer a job, contact me here:</string>
+    <string name="nav_drawer_personal_title">If you want to provide feedback, suggest improvements or offer a job, contact me here:</string>
     <string name="nav_drawer_personal_url">https://www.linkedin.com/in/benoithebrard/</string>
     <string name="nav_drawer_app_version">App version 1.0.0</string>
     <string name="nav_drawer_code_title">The source code of the app is available on:</string>
