--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">StableDiffuser</string>
-    <string name="title_search">Search</string>
+    <string name="title_search">Search for images</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_art">Art</string>
     <string name="empty_title">Nothing to show</string>
