--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_art">Art</string>
     <string name="empty_title">Nothing to show</string>
     <string name="retry_title">Try again</string>
+    <string name="retry_later">You need to rest your thumbs! Please try again in %1$d mn</string>
     <string name="show_more">More of the same</string>
     <string name="nsfw_text">Not safe for work</string>
     <string name="search_box_hint">Describe the art you\'re looking for</string>
