--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_art">Art</string>
     <string name="empty_title_mosaic">No image found</string>
-    <string name="empty_title_favorites">No favorite yet</string>
+    <string name="empty_title_favorites">Add a new favorite</string>
     <string name="retry_title">Try again</string>
     <string name="retry_later">Time to rest your thumbs! You may try again in %1$d mn</string>
     <string name="show_more">Explore this style</string>
