--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="empty_title_mosaic">No image found</string>
     <string name="empty_title_favorites">Add a new favorite</string>
     <string name="retry_title">Try again</string>
-    <string name="retry_later">Time to rest your thumbs! Please try again in %1$d mn</string>
+    <string name="retry_later">Give your thumbs some rest! You may try again in %1$d mn</string>
     <string name="show_more">Explore this style</string>
     <string name="more_of">Style of: %s</string>
     <string name="nsfw_text">Not safe for work</string>
@@ -20,7 +20,7 @@
     <string name="nav_drawer_title">About</string>
     <string name="nav_drawer_personal_title">Want to give feedback, suggest new features or offer a collaboration?</string>
     <string name="nav_drawer_personal_url">https://www.linkedin.com/in/benoithebrard/</string>
-    <string name="nav_drawer_app_version">App version 1.2.0</string>
+    <string name="nav_drawer_app_version">App version 1.2.1</string>
     <string name="nav_drawer_code_title">The app code is freely available at:</string>
     <string name="nav_drawer_code_url">https://github.com/benoithebrard/StableDiffuser</string>
 </resources>
