--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="empty_title_mosaic">No image found</string>
     <string name="empty_title_favorites">Add a new favorite</string>
     <string name="retry_title">Try again</string>
-    <string name="retry_later">Give your thumbs some rest! You may try again in %1$d mn</string>
+    <string name="retry_later">Give your thumbs a rest! You may try again in %1$d mn</string>
     <string name="show_more">Explore this style</string>
     <string name="more_of">Style of: %s</string>
     <string name="nsfw_text">Not safe for work</string>
